# ai-content-fully-automated

./: .env.example  .gitignore  .replit  CELERY_IMPLEMENTATION_STATUS.md  CELERY_SETUP_GUIDE.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  FASTAPI_IMPLEMENTATION_STATUS.md  MODELS_IMPLEMENTATION.md  Makefile  Project Prompt.md  README.md  STRUCTURE.md  SUMMARY.md  docker-compose.yml  pyproject.toml  replit.md  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  celery_app.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  database.py  minio_client.py  redis_client.py  vector_db.py
app/engines/: __init__.py  base.py
app/models/: __init__.py  account.py  analytics.py  content.py  models.py  publishing.py  usage_examples.py
app/schemas/: __init__.py  account.py  content.py
app/services/: trend_service.py  (+3 more)
attached_assets/: Pasted--DETAILED-REVIEW-Jo-Implement-Hua-vs-Jo-Missing-Hai-Mai_1777118192292.txt  Pasted--DETAILED-REVIEW-Jo-Implement-Hua-vs-Jo-Missing-Hai-Mai_1777118474218.txt
config/: database.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ENGINES.md
models/: feature_scaler.pkl  training_sample.json  virality_gb.pkl
scripts/: init_db.py  load_models.py  pre-commit-check.sh  start_beat.sh  start_worker.sh  test_analytics_simple.py  test_auto_fetch_integration.py  test_engagement.py  test_improvements.py  test_real_api_integration.py  train_engagement_models.py  train_engagement_standalone.py  train_realistic_engagement.py
tests/: test_api.py  test_engines.py  test_tasks.py
worker/: __init__.py
(+74 files in other folders)
